# freedink

./: .gitignore  AUTHORS  BUILD  ChangeLog  Makefile.am  NEWS  TROUBLESHOOTING  bootstrap  configure.ac  freedink.spec
android/: .gitignore  AndroidManifest.xml  GNUmakefile  redeploy.sh  remote-test-driver
autobuild/: .gitignore  freedink-debs.sh  freedink-exe-mxe.sh  freedink-rpms.sh
autobuild/freedink-android-snapshot/: Dockerfile  GNUmakefile  build.sh  dependencies-dl-android.sh  dependencies-dl-sdl.sh  dependencies-sdl.sh
autobuild/freedink-gnulinux-snapshot/: Dockerfile  GNUmakefile  build-deps.sh  build.sh  dependencies.sh  download-deps.sh
autobuild/freedink-w32-109.6/: .dockerignore  Dockerfile  GNUmakefile  build-deps.sh  (+1 more)
contrib/: d2c.c
debian/: changelog  control  freedink.maintscript  rules  watch
doc/: TODO  android-libsdlwiki.txt  android.txt  eclipse-cdt.txt  emscripten.txt  freedink.scm  gnulib.txt  midi.txt  palettes.txt  plg.txt  release.txt  static-build.txt  woe-debug.txt
emscripten/: extract.c  importexport.c  post.js  pre.js  shell.html  source.html
nsis/: .gitignore  MultiUser64.nsh  README
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  hr.po  hu.po  id.po  it.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  th.po  vi.po
share/: Makefile.am  README.fonts
share/appdata/: freedink.appdata.xml
share/applications/: freedink.desktop  freedinkedit.desktop
share/metainfo/: freedink.appdata.xml
src/: .dir-locals.el  AppFreeDink.cpp  AppFreeDink.h  AppFreeDinkedit.cpp  BgTilesetsManager.cpp  BgTilesetsManager.h  DMod.cpp  DMod.h  EditorMap.cpp  EditorMap.h  FakeIOGfxDisplay.cpp  FakeIOGfxDisplay.h  IOGfx.cpp  IOGfx.h  IOGfxDisplay.cpp  IOGfxDisplay.h  IOGfxDisplayGL2.cpp  IOGfxDisplayGL2.h  IOGfxDisplaySW.cpp  IOGfxDisplaySW.h  IOGfxGL2.cpp  IOGfxGL2.h  IOGfxGLFuncs.cpp  IOGfxGLFuncs.h  IOGfxPrimitives.cpp  IOGfxPrimitives.h  IOGfxPrimitivesSW.cpp  IOGfxPrimitivesSW.h  IOGfxSurface.cpp  IOGfxSurface.h  IOGfxSurfaceGL2.cpp  IOGfxSurfaceGL2.h  IOGfxSurfaceSW.cpp  IOGfxSurfaceSW.h  ImageLoader.cpp  ImageLoader.h  Makefile.am  SDL_android_main.c  TestEditorMap.cxx  TestIOGfxDisplay.cxx  (+142 more)
(+12 files in other folders)
